--- a/style.css
+++ b/style.css
@@ -265,7 +265,6 @@ nav ul li a:hover::after {
 
 #portfolio {
   padding: 50px 30px;
-
   margin: 20px 20px;
 }
 
@@ -284,9 +283,11 @@ nav ul li a:hover::after {
 
 .work img {
   width: 100%;
+  height: 100%;
   border-radius: 10px;
   display: block;
   transition: transform 0.5s;
+  
 }
 
 .layer {
